# Agentic-Google-Workflow-Orchestrator

./: .dockerignore  .gitignore  Api.md  Design.md  Dockerfile  README.md  Workspace_Orchestrator.postman_collection.json  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/agents/: __init__.py  base.py  gcal.py  gdrive.py  gmail.py
app/api/v1/: __init__.py  debug.py  health.py  mocks.py  orchestrator.py  routes.py
app/core/: __init__.py  config.py  logging.py
app/db/: models.py  seed.py  session.py  vector.sql
app/embeddings/: __init__.py  service.py
app/llm/: __init__.py  classifier.py  synthesizer.py
app/orchestrator/: __init__.py  dag.py  engine.py  planner.py
app/schemas/: __init__.py  base.py  orchestrator.py
app/services/: __init__.py  celery_app.py  task_queue.py  tasks.py
app/utils/: __init__.py  exceptions.py
tests/: test_orchestration.py
